# scoutlet

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  NOTICE  README.md  README_cn.md  pyproject.toml
.github/workflows/: engine-health.yml  sync-hf-space.yml
docs/: auto_heal_design.md  benchmark_annotation.md
scripts/: auto_heal.py  health_check.py  snapshot.py  update_gsa_useragents.py
skills/scoutlet-search/: SKILL.md
src/scoutlet/: __init__.py  browser.py  cli.py  client_adapter.py  engine_loader.py  exceptions.py  health.py  locales.py  network.py  outcome.py  pipeline.py  response.py  response_classifier.py  result_aggregation.py  result_types.py  routing.py  search.py  traits.py  utils.py  webui.py
src/scoutlet/data/: gsa_useragents.txt
src/scoutlet/engines/: 1337x.py  360search_videos.py  9gag.py  __init__.py  acfun.py  ansa.py  artic.py  artstation.py  arxiv.py  astrophysics_data_system.py  baidu.py  bandcamp.py  bilibili.py  bing.py  bing_images.py  bing_news.py  bing_videos.py  bitchute.py  brave.py  ccc_media.py  crates.py  crossref.py  dailymotion.py  deezer.py  deviantart.py  digbt.py  docker_hub.py  duckduckgo.py  duckduckgo_extra.py  emojipedia.py  findthatmeme.py  flickr.py  flickr_noapi.py  frinkiac.py  genius.py  gitea.py  github.py  github_code.py  gitlab.py  google.py  (+69 more)
tests/engines/: test_360search_videos_parser.py  test_9gag_parser.py  test_acfun_parser.py  test_ansa_parser.py  test_artic_parser.py  test_artstation_parser.py  test_arxiv_parser.py  test_astrophysics_data_system_parser.py  test_baidu_parser.py  test_bing_images_parser.py  test_bing_news_parser.py  test_bing_parser.py  test_bitchute_parser.py  test_ccc_media_parser.py  test_crossref_parser.py  test_dailymotion_parser.py  test_deviantart_parser.py  test_digbt_parser.py  test_duckduckgo_parser.py  test_emojipedia_parser.py  test_findthatmeme_parser.py  test_flickr_noapi_parser.py  test_flickr_parser.py  test_frinkiac_parser.py  test_github_parser.py  test_google_parser.py  test_il_post_parser.py  test_imdb_parser.py  test_ina_parser.py  test_ipernity_parser.py  test_iqiyi_parser.py  test_lemmy_parser.py  test_loc_parser.py  test_mastodon_parser.py  test_mediathekviewweb_parser.py  test_mixcloud_parser.py  test_moviepilot_parser.py  test_mrs_parser.py  test_niconico_parser.py  test_odysee_parser.py  (+35 more)
tests/integration/: conftest.py  test_pipeline.py
tests/live/: test_client_adapter_live.py  test_live_smoke.py
tests/unit/: test_browser.py  test_cdp_fallback.py  test_cli.py  test_client_adapter.py  test_engine_loader.py  test_health.py  test_network.py  test_outcome.py  test_response.py  test_response_classifier.py  test_result_aggregation.py  test_result_types.py  test_routing.py  test_search_defaults.py
(+81 files in other folders)
